--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Anypoint API Community Manager
+email: ravi.dhyani8881@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Transform developer portals into personalized digital experiences that promote 
+  API products and increase engagement across your API ecosystem.
+  Empower app developers, partners, and employees with the self-service resources and support they 
+  need to be successful.
 baseurl: "/Anypoint-community-manager" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
