--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,11 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
-
+comments: true
 google:
   ad-client: "ca-pub-9956886414358751"
   ad-slot: "5062134730"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
