--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Integration Portal"
 title_separator          : "-"
-subtitle                 : "Build your API Community"
+subtitle                 : "Build your Integration Portal"
 name                     : &name "Ravi Dhyani" # &name is a YAML anchor which can be *referenced later
 description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
 url                      : https://ravi-dhyani.github.io/Anypoint-community-manager # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
