--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name                     : &name "Ravi Dhyani" # &name is a YAML anchor which ca
 description              : &description "A flexible Jekyll theme for your blog or site with a minimalist aesthetic."
 url                      : https://ravi-dhyani.github.io/Anypoint-community-manager # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
-repository               : "ravi-dhyani/Anypoint-community-manager"
+repository               : "ravi-dhyani/incubator"
 teaser                   : "/assets/images/500x300.png" # path of fallback teaser image, e.g. 
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -104,7 +104,7 @@ author:
   links:
     - label: "Anypoint community manager"
       icon: "fas fa-fw fa-link"
-      url: "https://ravi-dhyani.github.io/Anypoint-community-manager/"
+      url: "https://ravi-dhyani.github.io/incubator/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/RaviDhyani20"
